# timelapse

./: .gitignore
1 preprocessing/s1_whole_sequence_colorshift/: CMakeLists.txt  colorshift.json  colorshift_filter.cpp  colorshift_georges.json  colorshift_rose.json
1 preprocessing/s2_extract_keyframes/: CMakeLists.txt  detect_keyframe.cpp  keyframes.json
1 preprocessing/s3_subsequence_movestd_movemedian/: CMakeLists.txt  moving_median_with_mask_function.cpp  moving_standard_deviation_mask_occlusion.py  new_rolling_median.h
1 preprocessing/s4_whole_sequence_L0smooth_on_time_axis/: l0smooth.HOW  rose-timewise.HOW  rose-unrotate.HOW  timerotate.py  timeunrotate.py
1 preprocessing/s4_whole_sequence_L0smooth_on_time_axis/l0smooth1Dsparse/: l0smooth1Dsparse.py  mask_h.pyx  ptsv.py
1 preprocessing/s5_get_albedo_sequence/: extract_albedo_image_sequence.py
2 layer extraction/KM_PD_layer_extraction/: CMakeLists.txt  georges_layer_extraction.json  layer_extraction.cpp  rose_layer_extraction.json
